<resources>
    <string name="app_name">Covid19help</string>
    <string name="phone_number">Phone Number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_sign_in">Verify and Sign In</string>
    <string name="sign_out">sign out</string>

    <string name="quick_checkup_message">Please note that your inputs will supplement the efforts being taken to contain the Corona pandemic and assess the Vaccination status and symptoms. Please help CovidHelp in helping India.</string>
    <string name="age_prompt">As per your registration details your age. Pls confirm / change your age.</string>
    <string name="vaccination_prompt">Have you taken the vaccination?</string>
    <string name="age">Age</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="how_many_prompt">HOW MANY DOSES?</string>
    <string name="confirm">Confirm</string>

    <!--Dose results.-->
    <string name="dose_one">Stay home and make sure you have no Symptoms of Corona Virus while taking the second dose.</string>
    <string name="dose_two">You\'re at low risk of transmitting Coronavirus, stay home to remain safe.</string>

    <!--No dose taken questions.-->
    <string name="recently_tested">Have you recently tested for Covid 19?</string>
    <string name="positive_or_not">Are you tested Covid-19 POSITIVE?</string>
    <string name="travelled">Have you travelled outside your city in the last two weeks?</string>
    <string name="symptoms">Do you have any covid related symptoms?</string>

    <!--Covid test result.-->
    <string name="covid_positive">Remain in home isolation and let us help you during these tough times.</string>
    <string name="covid_negative">You are safe. Avoid Going outside till necessary.</string>

    <string name="you_have_symptoms">Go to your nearest Health Centre and get yourself checked for COVID-19.</string>
    <string name="isolation">Please be in home isolation for 7 days.</string>
    <string name="one">1</string>
    <string name="two">2</string>

    <!--Final results-->
    <string name="travel_and_symptoms">Go to your nearest Health Centre and get yourself checked for COVID-19.</string>
    <string name="travel_but_no_symptom">PLEASE BE IN HOME ISOLATION FOR 7 DAYS.</string>
    <string name="no_travel_but_yes_symptom">Go to your nearest Health Centre and get yourself checked for COVID-19.</string>
    <string name="no_travel_no_symptom">You\'re Safe, Avoid Going outside until necessary.</string>
</resources>



