<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.covid19help.MainActivity2">


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="335dp"
        android:layout_height="114dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        app:layout_constraintVertical_bias="0.176"
        app:srcCompat="@drawable/covid" />

    <TextView
        android:id="@+id/textview11"
        android:layout_width="263dp"
        android:layout_height="65dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="2dp"
        android:text="HELP APP"
        android:textColor="	#800000"
        android:textSize="40dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="334dp" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/phone_number"
        android:textColor="@color/textColor"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:clickable="false"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_generate_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/generate_otp"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verify_sign_in"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"/>

</LinearLayout>