<?xml version="1.0" encoding="utf-8"?>
<!--Layout for quick checkup activity.-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E4DFDF"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_checkup"
    tools:context=".QuickCheckupActivity">

    <!--Scrolling while answering questions of the chat bot.-->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quickMessage"
                android:layout_width="@dimen/prompt_size"
                android:layout_height="wrap_content"
                android:background="@drawable/prompt_background"
                android:padding="@dimen/prompt_padding"
                android:text="@string/quick_checkup_message"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAgePrompt"
                android:layout_width="@dimen/prompt_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/prompt_background"
                android:padding="@dimen/prompt_padding"
                android:text="@string/age_prompt"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/quickMessage"
                app:layout_constraintTop_toBottomOf="@id/quickMessage"
                tools:visibility="visible" />

            <!--Enter age-->
            <EditText
                android:id="@+id/etAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/prompt_answer_background"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="@dimen/prompt_padding"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/btnConfirmAge"
                app:layout_constraintTop_toBottomOf="@+id/tvAgePrompt"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvVaccine"
                android:layout_width="@dimen/prompt_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/prompt_background"
                android:padding="@dimen/prompt_padding"
                android:text="@string/vaccination_prompt"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/quickMessage"
                app:layout_constraintTop_toBottomOf="@+id/etAge"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/btnContain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVaccine"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/btnYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/prompt_answer_background"
                    android:backgroundTint="@color/white"
                    android:padding="@dimen/prompt_padding"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/btnNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/prompt_answer_background"
                    android:backgroundTint="@color/white"
                    android:padding="@dimen/prompt_padding"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvHowMany"
                android:layout_width="@dimen/prompt_size"
                android:layout_height="wrap_content"
                android:background="@drawable/prompt_background"
                android:padding="@dimen/prompt_padding"
                android:text="@string/how_many_prompt"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/quickMessage"
                app:layout_constraintTop_toBottomOf="@+id/btnContain"
                tools:visibility="visible" />

            <!--After entering the age press confirm.-->
            <Button
                android:id="@+id/btnConfirmAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:backgroundTint="#3E2677"
                android:textAllCaps="false"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/etAge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etAge"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/doses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHowMany"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tvOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/prompt_answer_background"
                    android:backgroundTint="@color/white"
                    android:padding="12dp"
                    android:text="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/prompt_answer_background"
                    android:backgroundTint="@color/white"
                    android:padding="12dp"
                    android:text="2"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:visibility="visible" />

            </LinearLayout>



            <TextView
                android:id="@+id/tvDoseResult"
                app:layout_constraintStart_toStartOf="@id/quickMessage"
                app:layout_constraintTop_toBottomOf="@+id/doses"
                android:layout_width="@dimen/prompt_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/prompt_background"
                android:padding="@dimen/prompt_padding"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tvCovidPositiveOrNot"
                android:layout_width="@dimen/prompt_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="67dp"
                android:background="@drawable/prompt_background"
                android:padding="@dimen/prompt_padding"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/quickMessage"
                app:layout_constraintTop_toBottomOf="@+id/tvHowMany"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/btnContainDoseZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHowMany"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/btnYesDoseZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/prompt_answer_background"
                    android:backgroundTint="@color/white"
                    android:padding="@dimen/prompt_padding"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/btnNoDoseZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/prompt_answer_background"
                    android:backgroundTint="@color/white"
                    android:padding="@dimen/prompt_padding"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnCovPosOrNot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCovidPositiveOrNot"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/btnPos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/prompt_answer_background"
                    android:backgroundTint="@color/white"
                    android:padding="@dimen/prompt_padding"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/btnNeg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/prompt_answer_background"
                    android:backgroundTint="@color/white"
                    android:padding="@dimen/prompt_padding"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvCovidPositiveMessage"
                app:layout_constraintStart_toStartOf="@id/quickMessage"
                app:layout_constraintTop_toBottomOf="@+id/btnCovPosOrNot"
                android:layout_width="@dimen/prompt_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/prompt_background"
                android:padding="@dimen/prompt_padding"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="visible"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>